--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #8888;
+    background-color: #d2e2f2;
     font-family: Roboto, sans-serif;
 }
 
 h1 {
-    color: #0000;
+    color: #333;
 }
 
 .container {
